<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_home"
            android:title="@string/nav_home" />
        <item
            android:id="@+id/nav_inventory"
            android:icon="@drawable/ic_icon_delivery"
            android:title="@string/nav_inventory"
            app:actionViewClass="android.widget.TextView" />
        <item
            android:id="@+id/nav_journey"
            android:icon="@drawable/icon_merchant"
            android:title="@string/nav_journey" />

        <item
            android:id="@+id/nav_payment"
            android:icon="@drawable/ic_icon_collection"
            android:title="@string/nav_payment" />


        <item
            android:id="@+id/nav_print"
            android:icon="@drawable/ic_icon_print"
            android:title="@string/nav_print" />

        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/ic_icon_settings"
            android:title="@string/nav_settings" />
    </group>


</menu>
