<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".activity.LoginActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorWhite"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:orientation="vertical">

        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/ivLogo"
                android:layout_width="@dimen/_230sdp"
                android:layout_height="@dimen/_70sdp"
                android:layout_marginStart="8dp"
                android:layout_marginLeft="8dp"
                android:layout_marginTop="80dp"
                android:layout_marginEnd="8dp"
                android:layout_marginRight="8dp"
                android:background="@drawable/ic_logo"
                android:visibility="visible"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <LinearLayout
                android:id="@+id/lytContain"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:orientation="vertical"
                android:paddingBottom="@dimen/_30sdp"
                app:layout_constraintBottom_toTopOf="@+id/tv_appinfo"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/ivLogo">

                <android.support.constraint.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <android.support.design.widget.TextInputLayout
                        android:id="@+id/textInputEmail"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="36dp"
                        android:layout_marginLeft="36dp"
                        android:layout_marginTop="@dimen/_80sdp"
                        android:layout_marginEnd="36dp"
                        android:layout_marginRight="36dp"
                        android:gravity="center_vertical"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent">

                        <android.support.design.widget.TextInputEditText
                            android:id="@+id/username"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:gravity="center_vertical"
                            android:hint="@string/userName"
                            android:singleLine="true"
                            android:textAppearance="@style/Base.TextAppearance.AppCompat.Subhead"
                            android:textColor="@color/colorBlack" />

                    </android.support.design.widget.TextInputLayout>

                    <android.support.design.widget.TextInputLayout
                        android:id="@+id/textInputPassword"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="36dp"
                        android:layout_marginLeft="36dp"
                        android:layout_marginTop="14dp"
                        android:layout_marginEnd="36dp"
                        android:layout_marginRight="36dp"
                        android:gravity="center_vertical"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/textInputEmail">

                        <android.support.design.widget.TextInputEditText
                            android:id="@+id/password"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:gravity="center_vertical"
                            android:hint="@string/password"
                            android:password="true"
                            android:singleLine="true"
                            android:textAppearance="@style/Base.TextAppearance.AppCompat.Subhead"
                            android:textColor="@color/colorBlack" />

                    </android.support.design.widget.TextInputLayout>


                    <TextView
                        android:id="@+id/btn_login"
                        fontPath="@string/bold_font"
                        android:layout_width="0dp"
                        android:layout_height="@dimen/_40sdp"
                        android:layout_marginStart="36dp"
                        android:layout_marginLeft="36dp"
                        android:layout_marginTop="40dp"
                        android:layout_marginEnd="36dp"
                        android:layout_marginRight="36dp"
                        android:background="@drawable/btn_red"
                        android:gravity="center"
                        android:text="@string/login"
                        android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
                        android:textColor="@color/colorWhite"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/textInputPassword" />

                </android.support.constraint.ConstraintLayout>
            </LinearLayout>

            <TextView
                android:id="@+id/tv_appinfo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="36dp"
                android:layout_marginEnd="36dp"
                android:gravity="center|bottom"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Small"
                android:textColor="@color/colorDarkGray"
                app:layout_constraintBottom_toTopOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />


        </android.support.constraint.ConstraintLayout>

    </LinearLayout>
</layout>